--- a/.gitignore
+++ b/.gitignore
@@ -61,6 +61,7 @@ GIS/
 Comments/
 workingDatasets/
 conventionals08152018EVJ.csv
+processedStationData/
 R&S_app_v1/Comments/
 R&S_app_v1/exampleData/
 R&S_app_v1/MaryTestDrive/
