--- a/.gitignore
+++ b/.gitignore
@@ -58,6 +58,7 @@ rsconnect/
 Guidance/
 data/
 GIS/
+WorkflowOutline/
 Comments/
 workingDatasets/
 conventionals08152018EVJ.csv
@@ -71,3 +72,9 @@ R&S_app_v1/exampleData/
 R&S_app_v1/MaryTestDrive/
 R&S_portableApp_3.5.2/
 R&S_portableApp_3.5.2.zip 
+Riverine_portableApp_v1.zip
+R&S_app_v2/GIS/
+R&S_app_v2/data/
+R&S_app_v2/appModules_Testing/
+stationTableResults2019-02-20.csv
+
