--- a/.gitignore
+++ b/.gitignore
@@ -89,3 +89,7 @@ R&S_app_v3/GIS/
 R&S_app_v3/data/
 R&S_app_v3/appModules_Testing/
 R&S_app_v3/processedStationData/
+preprocessingRegionalData/data/
+preprocessingRegionalData/GIS/
+preprocessingRegionalData/preprocessedStationData/
+preprocessingRegionalData/snappingFunctions/
