map added to preprocessing step to find stations outside assessment layer

--- a/.gitignore
+++ b/.gitignore
@@ -93,3 +93,4 @@ preprocessingRegionalData/data/
 preprocessingRegionalData/GIS/
 preprocessingRegionalData/preprocessedStationData/
 preprocessingRegionalData/snappingFunctions/
+preprocessingRegionalData.zip
