TRO changes, chronic ammonia start

--- a/.gitignore
+++ b/.gitignore
@@ -97,3 +97,13 @@ preprocessingRegionalData.zip
 
 bacteriaAssessmentModule/bacteriaAssessmentModule_portable/
 bacteriaAssessmentModule/data/
+
+bacteriaAssessmentModule/bacteriaAssessmentModule_portable.zip
+Riverine_portableApp_SWRO/
+Riverine_portableApp_SWRO.zip
+
+CitizenNonAgency/2020IR Citizen Ambient4.14.19.csv
+CitizenNonAgency/2020IR Citizen Ambient4.14.19.xlsx
+CitizenNonAgency/2020IR NONA ambient.xlsx
+CitizenNonAgency/CitMonUniqueSamples.csv
+CitizenNonAgency/preliminaryCitMonSpatialData.html
